# django-starter

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.proxy.yml  docker-compose.yml  pyproject.toml
webapp/: .env.example  entrypoint.sh
webapp/staticfiles/: custom-styles.1672d25d6130.css  staticfiles.json
webapp/templates/: base.html  landing.html  legal.html
webapp/webapp/: logger.py  settings.py  urls.py
